--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="static/css/meanmenu.min.css">
     
   </head>
-  <body>
+  <body class="mini-navbar">
       <script>
           let controller = null;
           window.addEventListener('load-application', e => {
@@ -45,8 +45,15 @@
             if (typeof factory === "function") {
               controller = factory();
               controller.init();
-            }
-          })
+              if(document.addEventListener) {
+                document.addEventListener("visibilitychange", () => {
+                  controller.visibilityChanged(document['visibilityState']);
+                });
+              }
+
+              $(this).data("prevType", e.type);
+          }
+        });
       </script>
     <noscript>
       You need to enable JavaScript to run this app. cosik 2
@@ -76,6 +83,23 @@
           </div>
       </div>
   </div>
-  
+  <div class="status-area">
+    <div>
+      <div class="row">
+        <div id="status-area-icon" style="width: 30px;">
+          <span class="fas fa-times"></span>
+        </div>
+        <div id="status-area-refresh-date" style="width:60px;">
+          Refresh
+        </div>
+        <div id="status-area-db-date" style="width:60px;">
+          DB
+        </div>
+        <div id="status-area-wait-time" style="width:40px;">
+          time
+        </div>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
